--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ java {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
+
 processResources {
     dependsOn(generateSwaggerCode)
 }
@@ -52,12 +53,16 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'io.springfox:springfox-oas:3.0.0'
+
 	//swagger ends
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.mysql:mysql-connector-j:9.0.0'
 }
 
 tasks.named('test') {
