--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,21 @@
+version: '3.1'
+
 services:
+  db:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: changeme
+      MYSQL_DATABASE: demenage
+    ports:
+      - 3306:3306
+
+  phpmyadmin:
+    image: phpmyadmin
+    depends_on:
+      - db
+    restart: always
+    ports:
+      - 8080:80
+    environment:
+      - PMA_ARBITRARY=1
