--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
       MYSQL_DATABASE: demenage
     ports:
       - 3306:3306
+    volumes:
+      - data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin
@@ -19,3 +21,6 @@ services:
       - 8080:80
     environment:
       - PMA_ARBITRARY=1
+
+volumes:
+  data:
