--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=4500
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+app.security.jwt.keystore-location=jwtkeystore.jks
+app.security.jwt.keystore-password=dckr_pat_qIVLivFVqi95Nq6LJj6WcGOL6nA
+app.security.jwt.key-alias=jwt-sign-key
+app.security.jwt.private-key-passphrase=dckr_pat_qIVLivFVqi95Nq6LJj6WcGOL6nA
+spring.main.allow-circular-references=true
