--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demenage
-spring.datasource.url=jdbc:mysql://localhost:3306/demenage
-spring.datasource.username=root
-spring.datasource.password=changeme
+spring.datasource.url=${JAWSDB_URL}
+# spring.datasource.username=root
+# spring.datasource.password=changeme
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
 spring.jpa.generate-ddl=true
