--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=4500
+# server.port=4500
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.security.user.name=admin
