--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demenage
-spring.datasource.url=${JAWSDB_URL}
+spring.datasource.url=${STACKHERO_MYSQL_DATABASE_URL}
 # spring.datasource.username=root
 # spring.datasource.password=changeme
 spring.jpa.show-sql=true
