--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demenage
 spring.datasource.url=${STACKHERO_MYSQL_DATABASE_URL}
-# spring.datasource.username=root
-# spring.datasource.password=changeme
+spring.datasource.username=root
+spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
 spring.jpa.generate-ddl=true
