--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demenage
 spring.datasource.url=${JAWSDB_URL}
+server.port=${PORT:3306}
 # spring.datasource.username=root
 # spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
 spring.jpa.show-sql=true
