--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=demenage
-spring.datasource.url=jdbc:mysql://localhost:3306/demenage
-spring.datasource.username=root
-spring.datasource.password=changeme
+spring.datasource.url=${JAWSDB_URL}
+# spring.datasource.username=root
+# spring.datasource.password=changeme
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=4500
+server.port=${PORT:4500}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.security.user.name=admin
