--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 	//swagger ends
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
@@ -70,6 +70,9 @@ dependencies {
     
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j:9.0.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
+
+
 }
 
 tasks.named('test') {
