--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,23 +1,23 @@
 spring:
-  application:
-    name: demenage
+  profiles:
+    active: test
   datasource:
-    url: ${JAWSDB_URL}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:demenage;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
     show-sql: true
     generate-ddl: true
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
   security:
     user:
       name: admin
       password: admin123
   main:
     allow-circular-references: true
-
-server:
-  port: ${PORT:4500}
 
 app:
   security:
