--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: Build
 
 on:
   push:
-    branches:
-      - feat/connexion
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 
 jobs:
