--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,10 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured-all:5.5.0'
     testImplementation 'com.h2database:h2:2.3.232'
 
-
+    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
+    implementation("io.github.cdimascio:dotenv-java:3.2.0")
 }
 
 tasks.named('test') {
